setup base interfaces
